Remove deprecated types from common mapper. (#11409)
* Remove deprecated types from common mapper.
* Add methods to Value and OptionalValue without a Mappers instance, to get Mappers only when needed.
* Remove mappers usage from common URI module.
* Remove mappers usage from HTTP components where it is not immediately needed