@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2022, 2024 Oracle and/or its affiliates.
+ * Copyright (c) 2022, 2026 Oracle and/or its affiliates.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -25,7 +25,6 @@ import java.util.Set;
 import java.util.stream.Collectors;
 
 import io.helidon.common.GenericType;
-import io.helidon.common.mapper.MapperManager;
 import io.helidon.common.mapper.OptionalValue;
 import io.helidon.common.mapper.Value;
 import io.helidon.common.parameters.Parameters;
@@ -36,11 +35,9 @@ class UriMatrixParameters implements Parameters {
     private static final String COMPONENT = "uri/matrix";
     private static final String[] QUALIFIERS = new String[] {"uri", "matrix"};
     private final Map<String, List<String>> matrixParams;
-    private final MapperManager mapperManager;
 
     private UriMatrixParameters(Map<String, List<String>> matrixParams) {
         this.matrixParams = matrixParams;
-        this.mapperManager = MapperManager.global();
     }
 
     static Parameters create(String rawPath) {
@@ -84,13 +81,13 @@ class UriMatrixParameters implements Parameters {
                 // param now contains the path parameter
                 int eq = param.indexOf('=');
                 if (eq == -1) {
-                    pathParams.computeIfAbsent(decodeUri(param), it -> new ArrayList<>(1))
+                    pathParams.computeIfAbsent(decodeUri(param), _ -> new ArrayList<>(1))
                             .add("");
                 } else {
                     // now each value may be comma separated
                     String[] values = param.substring(eq + 1).split(",");
                     List<String> valueList = pathParams.computeIfAbsent(decodeUri(param.substring(0, eq)),
-                                                                        it -> new ArrayList<>(1));
+                                                                        _ -> new ArrayList<>(1));
                     for (String value : values) {
                         valueList.add(decodeUri(value));
                     }
@@ -98,7 +95,7 @@ class UriMatrixParameters implements Parameters {
             }
         }
 
-        pathParams.replaceAll((name, values) -> List.copyOf(values));
+        pathParams.replaceAll((_, values) -> List.copyOf(values));
         return new UriMatrixParameters(pathParams);
     }
 
@@ -114,7 +111,7 @@ class UriMatrixParameters implements Parameters {
     @Override
     public List<Value<String>> allValues(String name) throws NoSuchElementException {
         return all(name).stream()
-                .map(it -> Value.create(mapperManager, name, it, GenericType.STRING, QUALIFIERS))
+                .map(it -> Value.create(name, it, GenericType.STRING, QUALIFIERS))
                 .collect(Collectors.toList());
     }
 
@@ -124,16 +121,16 @@ class UriMatrixParameters implements Parameters {
         if (value == null) {
             throw new NoSuchElementException("This path does not contain parameter named \"" + name + "\"");
         }
-        return value.get(0);
+        return value.getFirst();
     }
 
     @Override
     public OptionalValue<String> first(String name) {
         List<String> value = matrixParams.get(name);
         if (value == null) {
-            return OptionalValue.create(mapperManager, name, GenericType.STRING, QUALIFIERS);
+            return OptionalValue.createEmpty(name, QUALIFIERS);
         }
-        return OptionalValue.create(mapperManager, name, value.get(0), GenericType.STRING, QUALIFIERS);
+        return OptionalValue.create(name, value.getFirst(), GenericType.STRING, QUALIFIERS);
     }
 
     @Override
